--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,11 @@
   text-transform: uppercase;
   margin: 0 20px 0 10px;
 }
+
+.intro {
+  background: url("../img/bg.jpg") center no-repeat;
+  background-size: cover;
+  height: 500px;
+  color: #fff;
+}
 /*# sourceMappingURL=style.css.map */
