--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
+body {
+  background-color: #f8f8f8;
+}
+
 .navbar-brand span {
   display: inline-block;
   text-transform: uppercase;
   margin: 0 20px 0 10px;
+  vertical-align: middle;
 }
 
 .intro {
@@ -9,5 +14,13 @@
   background-size: cover;
   height: 500px;
   color: #fff;
+}
+
+.block {
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  border-radius: 0.25rem;
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 /*# sourceMappingURL=style.css.map */
