--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,13 @@
+body{
+    background-color: #f8f8f8;
+}
+
 .navbar-brand {
     & span {
         display: inline-block;
         text-transform: uppercase;
         margin: 0 20px 0 10px;
+        vertical-align: middle;
     }
 }
 
@@ -11,4 +16,12 @@
     background-size: cover;
     height: 500px;
     color: #fff;
+}
+
+.block{
+    padding: 1rem;
+    margin-bottom: 1.5rem;
+    border-radius: 0.25rem;
+    background-color: #fff;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
 }
