--- a/css/style.css
+++ b/css/style.css
@@ -23,4 +23,21 @@ body {
   background-color: #fff;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
+
+.page-link {
+  color: #000;
+}
+
+.footer {
+  padding: 2rem;
+  background-color: #1b1b1b;
+  color: #fff;
+}
+
+.copyright {
+  background-color: #16181b;
+  color: #adb5bd;
+  text-align: center;
+  padding: 1rem;
+}
 /*# sourceMappingURL=style.css.map */
