--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: #f8f8f8;
 }
 
@@ -18,10 +18,26 @@ body{
     color: #fff;
 }
 
-.block{
+.block {
     padding: 1rem;
     margin-bottom: 1.5rem;
     border-radius: 0.25rem;
     background-color: #fff;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.page-link {
+    color: #000;
+}
+
+.footer {
+    padding: 2rem;
+    background-color: rgb(27, 27, 27);
+    color: #fff;
+}
+.copyright {
+    background-color: #16181b;
+    color: #adb5bd;
+    text-align: center;
+    padding: 1rem;
 }
